deploy: v1.1.85 - auto deployment